# WSPR-easy

./: .CLAUDE  .geminirc  .gitattributes  .gitignore  2843000202.STEP  85_SMA-50-0-144_111_YH.STEP  AS183-92LF.stp  ATGM336H.kicad_sym  BN43-202-transformer.kicad_sym  BOM_WSPR-ease.kicad_pcb (1).xls  CD74AC244M.kicad_sym  HRO-TYPE-C-31-M-12.kicad_mod  LPFs.kicad_sch  Library.bak  Library.kicad_sym  MOD18_MAX-M10M_UBL.step  USB_C_Receptacle_HRO_TYPE-C-31-M-12-bursted.kicad_mod  WSPR-ease-outline.step  WSPR-ease.kicad_jobset  WSPR-ease.kicad_pcb  WSPR-ease.kicad_prl  WSPR-ease.kicad_pro  WSPR-ease.kicad_sch  alan-comments-quotation1-T-P2W69401A-5sets-BOM_WSPR-ease.kicad_pcb(2025-12-15).csv  alan-comments-quotation1-T-P2W69401A-5sets-BOM_WSPR-ease.kicad_pcb(2025-12-15).xls  bn-43-202-horizontal.kicad_mod  bom.csv  ether.kicad_sch  fp-info-cache  gnss-antenna.kicad_sym  tx.kicad_sch  updated quotation1-T-P2W69401A-5sets-BOM_WSPR-ease.kicad_pcb(2025-12-02).ods  usb-c-16p.kicad_sym
sw/: CMakeLists.txt  Kconfig  app.overlay  calibration.cpp  calibration.hpp  config.cpp  config.hpp  gnss-data.hpp  gnss-rx.cpp  gnss-rx.hpp  logger.hpp  main.cpp  pins.pcf  prj.conf  scheduler.hpp  shellcmds.cpp  top.v  transmitter.cpp  transmitter.hpp  webserver.hpp  wspr-encoder.cpp  wspr-encoder.hpp
sw/hal/: hal.hpp
sw/scripts/: flash-lfs.sh  flash_webui.sh
sw/src/: band.hpp  captiveDNS.cpp  captiveDNS.hpp  captive_dns.cpp  captive_dns.hpp  filesystem.cpp  filesystem.hpp  fpga.cpp  fpga.hpp  gnss.cpp  gnss.hpp  logmanager.cpp  logmanager.hpp  main.cpp  shellcmds.cpp  webserver.cpp  (+5 more)
(+289 files in other folders)
